--- a/css/menu_styles.css
+++ b/css/menu_styles.css
@@ -15,7 +15,7 @@
   position: relative;
 }
 #cssmenu {
-  width: 225px;
+  width: 100%;
   border-bottom: 4px solid #656659;
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
