--- a/css/style.default.css
+++ b/css/style.default.css
@@ -133,9 +133,9 @@ h1,h2,h3,h4,h5 { font-weight: normal; line-height: normal; }
 .leftmenu .nav-header {
 	font-weight: normal; font-size: 11px; padding: 5px 20px; text-shadow: none; background: #232323;
 	border-bottom: 1px solid #222; }
-.leftmenu .nav-tabs.nav-stacked a { color: #999; padding: 10px 20px; font-size: 14px; }
+.leftmenu .nav-tabs.nav-stacked a { color:#FFF; padding: 10px 20px; font-size: 14px; }
 .leftmenu .nav-tabs.nav-stacked a span { margin-right: 10px; }
-.leftmenu .nav-tabs.nav-stacked > li > a { border: 0; border-bottom: 1px solid #232323; }
+.leftmenu .nav-tabs.nav-stacked > li > a { border: 0; border-bottom: 1px solid #FFFFFF; }
 .leftmenu .nav-tabs.nav-stacked > li > a:hover,
 .leftmenu .nav-tabs.nav-stacked > li > a:focus { background-color: #2c2c2c; color: #fff; border-bottom-color: #232323; }
 .leftmenu .nav-tabs.nav-stacked > li.active > a { background-color: #0866c6; color: #fff; border-bottom-color: rgba(0,0,0,0.2); }
