--- a/css/tunear_menu.css
+++ b/css/tunear_menu.css
@@ -9,8 +9,8 @@ and open the template in the editor.
 */
 
 .divleftmenu{
-    background: #FF0000;
-       
+    background: #BE0105;
+  opacity: 0.9;       
 }
 .liheadermenus
 {
